method if in class EmailScheduler